--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<div class="row">
 
 					<div class="col-lg-12 col-sm-6 col-8 header-top-right no-padding">
-						<a href="tel:+91 7358489731">+91 7358489731</a>
+						<a href="tel:+91 7358489731">7358489731</a>
 						<a href="mailto:jashanacc@gmail.com">jashanacc@gmail.com</a>
 					</div>
 				</div>
@@ -299,7 +299,7 @@ Extends from here -->
 	</section>
 	<br><br>
 	<div class="col-md-12 pb-30 header-text text-center " id="projects">
-		<h2 class="mb-10">Latest Finished Projects</h2>
+		<h1 class="mb-10">Latest Finished Projects</h1>
 	</div>
 	<div class="container" id="slideCar">
 		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -342,11 +342,10 @@ Extends from here -->
 	<div class="container">
 		<div class="break1"> <br>
 			<br>
-
 		</div>
 	</div>
 
-
+	<br>
 
 
 
@@ -361,12 +360,21 @@ Extends from here -->
 						<p style="color: beige;">Our sales team will be happy to answer your questions. We look forward
 							to being a valued supplier and contributing to your success.</p>
 						<br>
-						<h6>Follow Us</h6>
-						<p style="color: beige;">Let us be social</p>
+						<!-- <h6>Follow Us</h6> -->
+						<!-- <p style="color: beige;">Let us be social</p>
 						<div class="footer-social d-flex align-items-center">
 							<a href="#"><i class="fa fa-facebook"></i></a>
 							<a href="#"><i class="fa fa-twitter"></i></a>
-						</div>
+						</div> -->
+						<br>
+						<h6>Contact</h6>
+
+						<p><img src="img/phone-call.png" style="filter: invert(1);
+							width: 35px;" alt=""><span><a href="tel:+91 7358489731"
+									style="text-decoration:none;color: white;margin-left: 2%;">7358489731</a></span></p>
+						<p><img src="img/email.png" style="filter: invert(1);
+							width: 35px;" alt=""> <span><a href="mailto:jashanacc@gmail.com"
+									style="text-decoration:none ;color: white;margin-left: 2%;">jashanacc@gmail.com</a></span></p>
 					</div>
 				</div>
 				<div class="col-lg-2  col-md-6 col-sm-6">
